# 230827

./: CMakeLists.txt
230826/: CMakeLists.txt  KeyboardLayoutChangeListener.cpp  KeyboardLayoutChangeListener.h  LanguageIndicatorWidget.cpp  LanguageIndicatorWidget.h  main.cpp
